--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "jwt-decode": "^3.1.2",
     "ngx-simple-modal": "^1.4.17",
     "ngx-toastr": "^14.2.0",
     "remixicon": "^2.5.0",
